added profile photo and completed index page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <header class="header text-center">
-        <h1 class="blog-name pt-lg-4 mb-0"><a href="index.html">Anthony's Blog</a></h1>
+        <h1 class="blog-name pt-lg-4 mb-0"><a href="index.html">Ronney Lok</a></h1>
 
         <nav class="navbar navbar-expand-lg navbar-dark">
 
@@ -33,9 +33,9 @@
 
             <div id="navigation" class="collapse navbar-collapse flex-column">
                 <div class="profile-section pt-3 pt-lg-0">
-                    <img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/profile.png" alt="image">
+                    <img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/b6c.png" alt="image">
 
-                    <div class="bio mb-3">Hi, my name is Anthony Doe. Briefly introduce yourself here. You can also provide a link to the about page.<br><a href="about.html">Find out more about me</a></div>
+                    <div class="bio mb-3">Feel free to take a look around.</div>
                     <!--//bio-->
                     <ul class="social-list list-inline py-3 mx-auto">
                         <li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
@@ -65,15 +65,8 @@
     <div class="main-wrapper">
         <section class="cta-section theme-bg-light py-5">
             <div class="container text-center">
-                <h2 class="heading">DevBlog - A Blog Template Made For Developers</h2>
-                <div class="intro">Welcome to my blog. Subscribe and get my latest blog post in your inbox.</div>
-                <form class="signup-form form-inline justify-content-center pt-3">
-                    <div class="form-group">
-                        <label class="sr-only" for="semail">Your email</label>
-                        <input type="email" id="semail" name="semail1" class="form-control mr-md-1 semail" placeholder="Enter email">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Subscribe</button>
-                </form>
+                <h2 class="heading">Welcome to my profile</h2>
+                <div class="intro">I'm currently a 3rd Year Computer Science student at Simon Fraser University. I have experience coding in C/C++, Python, HTML, CSS, and Javascript. Currently open and looking for software internship opportunities for Summer 2023.</div>
             </div>
             <!--//container-->
         </section>
@@ -81,12 +74,11 @@
             <div class="container">
                 <div class="item mb-5">
                     <div class="media">
-                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-thumb-1.jpg" alt="image">
                         <div class="media-body">
-                            <h3 class="title mb-1"><a href="blog-post.html">Why Every Developer Should Have A Blog</a></h3>
-                            <div class="meta mb-1"><span class="date">Published 2 days ago</span><span class="time">5 min read</span><span class="comment"><a href="#">8 comments</a></span></div>
-                            <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-                            <a class="more-link" href="blog-post.html">Read more &rarr;</a>
+                            <h3 class="title mb-1"><a href="blog-post.html">Music Organizer</a></h3>
+                            <!--ADD GITHUB HOSPITAL BOT LINK-->
+                            <div class="meta mb-1"><span class="date">May 2022</span><span class="time">August 2022</div>
+                            <div class="intro">A computer program that helps users store songs in a playlist via usage of the linked list data structure. Coded in C++.</div>
                         </div>
                         <!--//media-body-->
                     </div>
@@ -95,12 +87,12 @@
                 <!--//item-->
                 <div class="item mb-5">
                     <div class="media">
-                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-thumb-2.jpg" alt="image">
                         <div class="media-body">
-                            <h3 class="title mb-1"><a href="blog-post.html">A Guide to Becoming a Full-Stack Developer</a></h3>
-                            <div class="meta mb-1"><span class="date">Published 3 months ago</span><span class="time">3 min read</span><span class="comment"><a href="#">26 comments</a></span></div>
-                            <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-                            <a class="more-link" href="blog-post.html">Read more &rarr;</a>
+                            <h3 class="title mb-1"><a href="blog-post.html">Hospital Bot</a></h3>
+                            <!--ADD GITHUB Music Organizer LINK-->
+                            <div class="meta mb-1"><span class="date">April 2022</span><span class="time">July 2022</div>
+                            <div class="intro">A texting chat bot that allows users to text their address to a bot. The bot then texts back
+                                the locations of the closest hospitals as well as their wait times. Coded in Python.</div>
                         </div>
                         <!--//media-body-->
                     </div>
@@ -110,26 +102,12 @@
 
                 <div class="item mb-5">
                     <div class="media">
-                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-thumb-3.jpg" alt="image">
                         <div class="media-body">
-                            <h3 class="title mb-1"><a href="blog-post.html">High Performance JavaScript</a></h3>
-                            <div class="meta mb-1"><span class="date">Published 1 month ago</span><span class="time">8 min read</span><span class="comment"><a href="#">12 comments</a></span></div>
-                            <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-                            <a class="more-link" href="blog-post.html">Read more &rarr;</a>
-                        </div>
-                        <!--//media-body-->
-                    </div>
-                    <!--//media-->
-                </div>
-                <!--//item-->
-                <div class="item mb-5">
-                    <div class="media">
-                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-thumb-4.jpg" alt="image">
-                        <div class="media-body">
-                            <h3 class="title mb-1"><a href="blog-post.html">Top 5 JavaScript Frameworks</a></h3>
-                            <div class="meta mb-1"><span class="date">Published 2 months ago</span><span class="time">15 min read</span><span class="comment"><a href="#">3 comments</a></span></div>
-                            <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-                            <a class="more-link" href="blog-post.html">Read more &rarr;</a>
+                            <h3 class="title mb-1"><a href="blog-post.html">TSP Solver</a></h3>
+                            <!--ADD GITHUB TSP Solver LINK-->
+                            <div class="meta mb-1"><span class="date">January 2022</span><span class="time">May 2022</div>
+                            <div class="intro">An algorithm that solves the NP-complete Traveling Salesman Problem. Coded in C++
+                                with a focus in OOP.</div>
                         </div>
                         <!--//media-body-->
                     </div>
@@ -139,38 +117,21 @@
 
                 <div class="item mb-5">
                     <div class="media">
-                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-thumb-5.jpg" alt="image">
                         <div class="media-body">
-                            <h3 class="title mb-1"><a href="blog-post.html">Learn React in 24 Hours</a></h3>
-                            <div class="meta mb-1"><span class="date">Published 2 months ago</span><span class="time">10 min read</span><span class="comment"><a href="#">23 comments</a></span></div>
-                            <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-                            <a class="more-link" href="blog-post.html">Read more &rarr;</a>
+                            <h3 class="title mb-1"><a href="blog-post.html">Image Processor</a></h3>
+                            <!--ADD GITHUB TSP Solver LINK-->
+                            <div class="meta mb-1"><span class="date">September 2020</span><span class="time">December 2020</div>
+                            <div class="intro">An image editing tool that takes in an image and alters the image according to user commands.
+                                Coded in Python.</div>
                         </div>
                         <!--//media-body-->
                     </div>
                     <!--//media-->
                 </div>
                 <!--//item-->
+            
 
-                <div class="item">
-                    <div class="media">
-                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-thumb-6.jpg" alt="image">
-                        <div class="media-body">
-                            <h3 class="title mb-1"><a href="blog-post.html">About Remote Working</a></h3>
-                            <div class="meta mb-1"><span class="date">Published 3 months ago</span><span class="time">2 min read</span><span class="comment"><a href="#">1 comment</a></span></div>
-                            <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-                            <a class="more-link" href="blog-post.html">Read more &rarr;</a>
-                        </div>
-                        <!--//media-body-->
-                    </div>
-                    <!--//media-->
-                </div>
-                <!--//item-->
-
-                <nav class="blog-nav nav nav-justified my-5">
-                    <a class="nav-link-prev nav-item nav-link d-none rounded-left" href="#">Previous<i class="arrow-prev fas fa-long-arrow-alt-left"></i></a>
-                    <a class="nav-link-next nav-item nav-link rounded" href="blog-list.html">Next<i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
-                </nav>
+             
 
             </div>
         </section>
