--- a/about.html
+++ b/about.html
@@ -31,16 +31,13 @@
 
             <div id="navigation" class="collapse navbar-collapse flex-column">
                 <div class="profile-section pt-3 pt-lg-0">
-                    <img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/profile.png" alt="image">
+                    <img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/b6c.png" alt="image">
 
-                    <div class="bio mb-3">Hi, my name is Anthony Doe. Briefly introduce yourself here. You can also provide a link to the about page.<br><a href="about.html">Find out more about me</a></div>
+                    <div class="bio mb-3">Feel free to take a look around.</div>
                     <!--//bio-->
                     <ul class="social-list list-inline py-3 mx-auto">
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-github-alt fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-codepen fa-fw"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/ronneylok"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+                        <li class="list-inline-item"><a href="https://github.com/ronneylogs"><i class="fab fa-github-alt fa-fw"></i></a></li>
                     </ul>
                     <!--//social-list-->
                     <hr>
@@ -49,21 +46,16 @@
 
                 <ul class="navbar-nav flex-column text-left">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html"><i class="fas fa-home fa-fw mr-2"></i>Blog Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="blog-post.html"><i class="fas fa-bookmark fa-fw mr-2"></i>Blog Post</a>
+                        <a class="nav-link" href="index.html"><i class="fas fa-home fa-fw mr-2"></i>Profile<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="about.html"><i class="fas fa-user fa-fw mr-2"></i>About Me</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="assets/Resume.pdf"><i class="fas fa-briefcase fa-fw mr-2"></i>Resume</a>
+                    </li>
                 </ul>
-
-                <div class="my-2 my-md-3">
-
-                    <a class="btn btn-primary" href="https://themes.3rdwavemedia.com/" target="_blank">Get in Touch</a>
-
-                </div>
+            </div>
             </div>
         </nav>
     </header>
@@ -97,69 +89,8 @@
             </div>
         </article>
         <!--//about-section-->
-
-        <section class="cta-section theme-bg-light py-5">
-            <div class="container text-center">
-                <h2 class="heading">Newsletter</h2>
-                <div class="intro">Welcome to my blog. Subscribe and get my latest blog post in your inbox.</div>
-                <form class="signup-form form-inline justify-content-center pt-3">
-                    <div class="form-group">
-                        <label class="sr-only" for="semail">Your email</label>
-                        <input type="email" id="semail" name="semail1" class="form-control mr-md-1 semail" placeholder="Enter email">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Subscribe</button>
-                </form>
-            </div>
-            <!--//container-->
-        </section>
-
-        <footer class="footer text-center py-2 theme-bg-dark">
-
-            <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
-            <small class="copyright">Designed with <i class="fas fa-heart" style="color: #fb866a;"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
-
-        </footer>
-
     </div>
     <!--//main-wrapper-->
-
-
-    <!-- *****CONFIGURE STYLE (REMOVE ON YOUR PRODUCTION SITE)****** -->
-    <div id="config-panel" class="config-panel d-none d-lg-block">
-        <div class="panel-inner">
-            <a id="config-trigger" class="config-trigger config-panel-hide text-center" href="#"><i class="fas fa-cog fa-spin mx-auto" data-fa-transform="down-6" ></i></a>
-            <h5 class="panel-title">Choose Colour</h5>
-            <ul id="color-options" class="list-inline mb-0">
-                <li class="theme-1 active list-inline-item">
-                    <a data-style="assets/css/theme-1.css" href="#"></a>
-                </li>
-                <li class="theme-2  list-inline-item">
-                    <a data-style="assets/css/theme-2.css" href="#"></a>
-                </li>
-                <li class="theme-3  list-inline-item">
-                    <a data-style="assets/css/theme-3.css" href="#"></a>
-                </li>
-                <li class="theme-4  list-inline-item">
-                    <a data-style="assets/css/theme-4.css" href="#"></a>
-                </li>
-                <li class="theme-5  list-inline-item">
-                    <a data-style="assets/css/theme-5.css" href="#"></a>
-                </li>
-                <li class="theme-6  list-inline-item">
-                    <a data-style="assets/css/theme-6.css" href="#"></a>
-                </li>
-                <li class="theme-7  list-inline-item">
-                    <a data-style="assets/css/theme-7.css" href="#"></a>
-                </li>
-                <li class="theme-8  list-inline-item">
-                    <a data-style="assets/css/theme-8.css" href="#"></a>
-                </li>
-            </ul>
-            <a id="config-close" class="close" href="#"><i class="fa fa-times-circle"></i></a>
-        </div>
-        <!--//panel-inner-->
-    </div>
-    <!--//configure-panel-->
 
 
 
@@ -168,8 +99,6 @@
     <script src="assets/plugins/popper.min.js"></script>
     <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Style Switcher (REMOVE ON YOUR PRODUCTION SITE) -->
-    <script src="assets/js/demo/style-switcher.js"></script>
 
 
 </body>
