--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <div class="bio mb-3">Feel free to take a look around.</div>
                     <!--//bio-->
                     <ul class="social-list list-inline py-3 mx-auto">
+                        <li class="list-inline-item"><a href="mailto:ronneylok@gmail.com"><i class="fa fa-envelope fa-fw fa-fw"></i></a></li>
                         <li class="list-inline-item"><a href="https://www.linkedin.com/in/ronneylok"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
                         <li class="list-inline-item"><a href="https://github.com/ronneylogs"><i class="fab fa-github-alt fa-fw"></i></a></li>
                     </ul>
