Completed About Me page

--- a/about.html
+++ b/about.html
@@ -67,26 +67,25 @@
             <div class="container">
                 <h2 class="title mb-3">About Me</h2>
 
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque
-                    eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
-                    Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. </p>
-                <figure><img class="img-fluid" src="assets/images/about-me.jpg" alt="image"></figure>
-                <h5 class="mt-5">About The Blog</h5>
-                <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
-                    laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing
-                    sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus
-                    tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus
-                    quam, scelerisque ut, mollis sed, nonummy id, metus.</p>
-                <h5 class="mt-5">My Skills and Experiences</h5>
-                <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
-                    laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.</p>
-                <h5 class="mt-5">Side Projects</h5>
-                <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
-                    laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.</p>
+                <p>I grew up in Vancouver during the late 2000s where shopping at Zellers and biking around Stanley Park dominated the majority of my childhood. Then onto my teenage years where studying at bubble tea stores took up all my time. And now finally,
+                    as a young software developer, my days are spent coding new projects or looking for internships in both Vancouver and SF. Apart from growing my exciting career, I do have hobbies which include hiking, reading, and piano playing.
+                </p>
+                <figure><img class="img-fluid" src="assets/images/panorama_ridge.png" alt="image"></figure>
+                <h5 class="mt-5">Hiking</h5>
+                <p>When I’m not doing geeky computery stuff, I enjoy going outdoors for both camping and hiking. The photo above is one I took during the summer while backpacking at Garibaldi Park. It was my first time backpacking, the trip took me two days
+                    to complete which consisted of hiking over 9 kilometers uphill to reach the campground. Hiking up to the Panorama Ridge summit took another 6 kilometers of strenuous uphill legwork. The experience was difficult but overall extremely
+                    rewarding. Something I will never forget is using the outhouses, it was impossible to get used to the smells.
+                </p>
+                <h5 class="mt-5">Reading</h5>
+                <p>For every break between semesters, I strive to finish at least one book. The genres I like to focus on are self-help books and fiction novels. So far, my favourites include The Mountain is You by Brianna Wiest and The 7 Habits of Highly
+                    Effective People by Stephen Covey. Both books helped me incredibly in recognizing my goals and how to achieve them. A quote that I will never forget is “Start quantifying your days by how many healthy, positive things you accomplished,
+                    and you will see how quickly you begin to make progress.” - Brianna West. This sentence is one that I refer to constantly whenever I need a little bit of empowerment.</p>
+                <h5 class="mt-5">Piano</h5>
+                <p>I started piano lessons when I was 6. At one point in my life, I even thought I would develop a career out of this hobby. Although I stopped piano lessons in grade 12, I still practice consistently. However, instead of classical pieces,
+                    I focus more now on piano arrangements of pop genre classics. A piece that I am working on right now is the piano arrangement of the background piano soundtrack from the movie Parasite during the “Jjapaguri” scene. I also included
+                    a video below of a piece that I worked on during my break.</p>
 
-                <figure>
-                    <a href="https://made4dev.com"><img class="img-fluid" src="assets/images/promo-banner.jpg" alt="image"></a>
-                </figure>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bQP6dz2alL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </article>
         <!--//about-section-->
