--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="item mb-5">
                     <div class="media">
                         <div class="media-body">
-                            <h3 class="title mb-1"><a href="blog-post.html">Music Organizer</a></h3>
+                            <h3 class="title mb-1"><a href="https://github.com/ronneylogs/Music-Organizer">Music Organizer</a></h3>
                             <!--ADD GITHUB HOSPITAL BOT LINK-->
                             <div class="meta mb-1"><span class="date">May 2022</span><span class="time">August 2022</div>
                             <div class="intro">A computer program that helps users store songs in a playlist via usage of the linked list data structure. Coded in C++.</div>
@@ -87,7 +87,7 @@
                 <div class="item mb-5">
                     <div class="media">
                         <div class="media-body">
-                            <h3 class="title mb-1"><a href="blog-post.html">Hospital Bot</a></h3>
+                            <h3 class="title mb-1"><a href="https://github.com/ronneylogs/HospitalBot">Hospital Bot</a></h3>
                             <!--ADD GITHUB Music Organizer LINK-->
                             <div class="meta mb-1"><span class="date">April 2022</span><span class="time">July 2022</div>
                             <div class="intro">A texting chat bot that allows users to text their address to a bot. The bot then texts back
@@ -102,7 +102,7 @@
                 <div class="item mb-5">
                     <div class="media">
                         <div class="media-body">
-                            <h3 class="title mb-1"><a href="blog-post.html">TSP Solver</a></h3>
+                            <h3 class="title mb-1"><a href="https://github.com/ronneylogs/TSP-Solver">TSP Solver</a></h3>
                             <!--ADD GITHUB TSP Solver LINK-->
                             <div class="meta mb-1"><span class="date">January 2022</span><span class="time">May 2022</div>
                             <div class="intro">An algorithm that solves the NP-complete Traveling Salesman Problem. Coded in C++
@@ -117,7 +117,7 @@
                 <div class="item mb-5">
                     <div class="media">
                         <div class="media-body">
-                            <h3 class="title mb-1"><a href="blog-post.html">Image Processor</a></h3>
+                            <h3 class="title mb-1"><a href="https://github.com/ronneylogs/Image-Processor">Image Processor</a></h3>
                             <!--ADD GITHUB TSP Solver LINK-->
                             <div class="meta mb-1"><span class="date">September 2020</span><span class="time">December 2020</div>
                             <div class="intro">An image editing tool that takes in an image and alters the image according to user commands.
