--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                 <h2 class="title mb-3">About Me</h2>
 
                 <p>I grew up in Vancouver during the late 2000s where shopping at Zellers and biking around Stanley Park dominated the majority of my childhood. Then onto my teenage years where studying at bubble tea stores took up all my time. And now finally,
-                    as a young software developer, my days are spent coding new projects or looking for internships in both Vancouver and SF. Apart from growing my exciting career, I do have hobbies which include hiking, reading, and piano playing.
+                    as a young software developer, my days are spent coding new projects or looking for internships in both Vancouver and the Bay area. Apart from growing my exciting career, I do have hobbies which include hiking, reading, and piano playing.
                 </p>
                 <figure><img class="img-fluid" src="assets/images/panorama_ridge.png" alt="image"></figure>
                 <h5 class="mt-5">Hiking</h5>
