added maze game project to website

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                 <div class="item mb-5">
                     <div class="media">
                         <div class="media-body">
-                            <h3 class="title mb-1"><a href="https://github.com/ronneylogs/Music-Organizer">Music Organizer</a></h3>
-                            <!--ADD GITHUB HOSPITAL BOT LINK-->
-                            <div class="meta mb-1"><span class="date">May 2022</span><span class="time">August 2022</div>
-                            <div class="intro">A computer program that helps users store songs in a playlist via usage of the linked list data structure. Coded in C++.</div>
+                            <h3 class="title mb-1"><a href="https://github.com/ronneylogs/Maze-Project">Maze Game</a></h3>
+                          
+                            <div class="meta mb-1"><span class="date">January 2023</span><span class="time">April 2023</div>
+                            <div class="intro">Maze escape game that follows the adventures of a Arcanist imprisoned for practicing forbidden magic. Coded in Java using Maven.</div>
                         </div>
                         <!--//media-body-->
                     </div>
@@ -95,7 +95,7 @@
                     <div class="media">
                         <div class="media-body">
                             <h3 class="title mb-1"><a href="https://github.com/ronneylogs/HospitalBot">Hospital Bot</a></h3>
-                            <!--ADD GITHUB Music Organizer LINK-->
+                            
                             <div class="meta mb-1"><span class="date">April 2022</span><span class="time">July 2022</div>
                             <div class="intro">A texting chat bot that allows users to text their address to a bot. The bot then texts back
                                 the locations of the closest hospitals as well as their wait times. Coded in Python.</div>
