changed css styles

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 
             <div id="navigation" class="collapse navbar-collapse flex-column">
                 <div class="profile-section pt-3 pt-lg-0">
-                    <img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/b6c.png" alt="image">
+                    <img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/b5c.png" alt="image">
 
                     <div class="bio mb-3">Feel free to take a look around.</div>
                     <!--//bio-->
                     <ul class="social-list list-inline py-3 mx-auto">
-                        <li class="list-inline-item"><a href="mailto:ronneylok@gmail.com"><i class="fa fa-envelope fa-fw fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/ronneylok"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a href="https://github.com/ronneylogs"><i class="fab fa-github-alt fa-fw"></i></a></li>
+                        <li class="list-inline-item"><a href="mailto:ronneylok@gmail.com"><i class="fa fa-envelope fa-fw fa-fw" style="color:#212121"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/ronneylok"><i class="fab fa-linkedin-in fa-fw" style="color:#212121"></i></a></li>
+                        <li class="list-inline-item"><a href="https://github.com/ronneylogs"><i class="fab fa-github-alt fa-fw" style="color:#212121"></i></a></li>
                     </ul>
                     <!--//social-list-->
                     <hr>
