added shadow to project cards

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </section>
         <section class="blog-list px-3 py-5 p-md-5">
             <div class="container">
-                <div class="card mb-5 py-3 px-3">
+                <div class="card mb-5 py-3 px-3 shadow">
                     <div class="item">
                         <div class="media">
                             <div class="media-body">
@@ -94,7 +94,7 @@
                 </div>
 
                 <!--//item-->
-                <div class="card mb-5 py-3 px-3">
+                <div class="card mb-5 py-3 px-3 shadow">
                     <div class="item">
                         <div class="media">
                             <div class="media-body">
@@ -112,7 +112,7 @@
                 </div>
 
 
-                <div class="card mb-5 py-3 px-3">
+                <div class="card mb-5 py-3 px-3 shadow">
                     <div class="item">
                         <div class="media">
                             <div class="media-body">
@@ -129,7 +129,7 @@
                     </div>
                 </div>
        
-                <div class="card mb-5 py-3 px-3">
+                <div class="card mb-5 py-3 px-3 shadow">
                     <div class="item">
                         <div class="media">
                             <div class="media-body">
