added bill wizard project

--- a/index.html
+++ b/index.html
@@ -78,6 +78,22 @@
         </section>
         <section class="blog-list px-3 py-5 p-md-5">
             <div class="container">
+
+                <div class="card mb-5 py-3 px-3 shadow">
+                    <div class="item">
+                        <div class="media">
+                            <div class="media-body">
+                                <h3 class="title mb-1"><a href="https://github.com/ronneylogs/Maze-Project">Bill Wizard</a> <span class="meta mb-1" style="color:#0BDA51">Ongoing*</span></h3> 
+                                <div class="meta mb-1"><span class="date">May 2023</span><span class="time">Current</div> 
+                                <div class="intro">An iOS and Android app to helps users manage their receipts. Coded in Dart with the Flutter SDK, ExpressJS, and MongoDB. </div>
+                            </div>
+                            <a href="https://github.com/ronneylogs/Bill-Wizard" class="btn btn-secondary" style="background-color:black">View</a>
+                            <!--//media-body-->
+                        </div>
+                        <!--//media-->
+                    </div>
+                </div>
+
                 <div class="card mb-5 py-3 px-3 shadow">
                     <div class="item">
                         <div class="media">
