--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <div class="media-body">
                                 <h3 class="title mb-1"><a href="https://github.com/ronneylogs/Maze-Project">Bill Wizard</a> <span class="meta mb-1" style="color:#0BDA51">Ongoing*</span></h3> 
                                 <div class="meta mb-1"><span class="date">May 2023</span><span class="time">Current</div> 
-                                <div class="intro">An iOS and Android app to helps users manage their receipts. Coded in Dart with the Flutter SDK, ExpressJS, and MongoDB. </div>
+                                <div class="intro">An iOS and Android app to helps users manage their receipts and split bills with their friends. Coded in Dart with the Flutter SDK, ExpressJS, and MongoDB. </div>
                             </div>
                             <a href="https://github.com/ronneylogs/Bill-Wizard" class="btn btn-secondary" style="background-color:black">View</a>
                             <!--//media-body-->
