deleted uneeded files and fixed video size

--- a/about.html
+++ b/about.html
@@ -90,8 +90,10 @@
                 <p>I started piano lessons when I was 6. At one point in my life, I even thought I would develop a career out of this hobby. Although I stopped piano lessons in grade 12, I still practice consistently. However, instead of classical pieces,
                     I focus more now on piano arrangements of pop genre classics. A piece that I am working on right now is the piano arrangement of the background piano soundtrack from the movie Parasite during the “Jjapaguri” scene. I also included
                     a video below of a piece that I worked on during my break.</p>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bQP6dz2alL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/bQP6dz2alL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </article>
         <!--//about-section-->
