made minor content changes to about page

--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                 <h2 class="title mb-3">About Me</h2>
 
                 <p>I grew up in Vancouver during the late 2000s where shopping at Zellers and biking around Stanley Park dominated the majority of my childhood. Then onto my teenage years where studying at bubble tea stores took up all my time. And now finally,
-                    as a young software developer, my days are spent coding new projects or looking for internships in both Vancouver and the Bay area. Apart from growing my exciting career, I do have hobbies which include hiking, reading, and piano playing.
+                    as a young software developer, my days are spent coding new projects or looking for internships in both Vancouver and the Bay area. Apart from growing my exciting career, I do have hobbies which include hiking, and piano playing.
                 </p>
                 <figure><img class="img-fluid" src="assets/images/panorama_ridge.png" alt="image"></figure>
                 <h5 class="mt-5">Hiking</h5>
@@ -82,14 +82,14 @@
                     to complete which consisted of hiking over 9 kilometers uphill to reach the campground. Hiking up to the Panorama Ridge summit took another 6 kilometers of strenuous uphill legwork. The experience was difficult but overall extremely
                     rewarding. Something I will never forget is using the outhouses, it was impossible to get used to the smells.
                 </p>
-                <h5 class="mt-5">Reading</h5>
+                <!-- <h5 class="mt-5">Reading</h5>
                 <p>For every break between semesters, I strive to finish at least one book. The genres I like to focus on are self-help books and fiction novels. So far, my favourites include The Mountain is You by Brianna Wiest and The 7 Habits of Highly
                     Effective People by Stephen Covey. Both books helped me incredibly in recognizing my goals and how to achieve them. A quote that I will never forget is “Start quantifying your days by how many healthy, positive things you accomplished,
-                    and you will see how quickly you begin to make progress.” - Brianna West. This sentence is one that I refer to constantly whenever I need a little bit of empowerment.</p>
+                    and you will see how quickly you begin to make progress.” - Brianna West. This sentence is one that I refer to constantly whenever I need a little bit of empowerment.</p> -->
                 <h5 class="mt-5">Piano</h5>
-                <p>I started piano lessons when I was 6. At one point in my life, I even thought I would develop a career out of this hobby. Although I stopped piano lessons in grade 12, I still practice consistently. However, instead of classical pieces,
+                <p>I started piano lessons when I was 6. At one point in my life, I even thought I would develop a career out of this hobby. Although I've stopped piano lessons, I still practice consistently. However, instead of classical pieces,
                     I focus more now on piano arrangements of pop genre classics. A piece that I am working on right now is the piano arrangement of the background piano soundtrack from the movie Parasite during the “Jjapaguri” scene. I also included
-                    a video below of a piece that I worked on during my break.</p>
+                    a video below of another piece that I worked on during my break.</p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bQP6dz2alL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
