--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                 <div class="profile-section pt-3 pt-lg-0">
                     <img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/b5c.png" alt="image">
 
-                    <div class="bio mb-3">Feel free to take a look around.</div>
+                    <div class="bio mb-3">Currently in love with the Flutter framework.
+                        <!-- <img class="" style="height:1%;" src="assets/images/flutterio-icon.svg" alt="image"> -->
+                    </div>
                     <!--//bio-->
                     <ul class="social-list list-inline py-3 mx-auto">
                         <li class="list-inline-item"><a href="mailto:ronneylok@gmail.com"><i class="fa fa-envelope fa-fw fa-fw" style="color:#212121"></i></a></li>
