--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
                                 <h3 class="title mb-1"><a href="https://github.com/ronneylogs/Bill-Wizard">Bill Wizard</a> <span class="meta mb-1" style="color:#0BDA51">Ongoing*</span></h3> 
                                 <div class="meta mb-1"><span class="date">May 2023</span><span class="time">Current</div> 
                                 <div class="intro">An iOS and Android app to helps users manage their receipts and split bills with their friends. Coded in Dart with the Flutter SDK, ExpressJS, and MongoDB. </div>
+                                <br>
+                                <div class="intro">*Also experimenting with a 
+                                    <a href="https://github.com/ronneylogs/Bill-Wizard-Web" style="color:#0da9db;">Flutter web version</a>
+                                    of the app.
+                                </div>
                             </div>
                             <a href="https://github.com/ronneylogs/Bill-Wizard" class="btn btn-secondary" style="background-color:black">View</a>
                             <!--//media-body-->
