added express in bio

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section class="cta-section theme-bg-light py-5">
             <div class="container text-center">
                 <h2 class="heading">Welcome to my profile</h2>
-                <div class="intro">I'm currently a 3rd Year Computer Science student at Simon Fraser University. I have experience with C/C++, Python, Java, HTML/CSS/JS, and the Flutter SDK. Currently open and looking for software internship opportunities for Fall 2023.</div>
+                <div class="intro">I'm currently a 3rd Year Computer Science student at Simon Fraser University. I have experience with C/C++, Python, Java, HTML/CSS/JS, ExpressJS and the Flutter SDK. Currently open and looking for software internship opportunities for Fall 2023.</div>
             </div>
             <!--//container-->
         </section>
