changed up wording of about me section

--- a/about.html
+++ b/about.html
@@ -87,8 +87,7 @@
                     Effective People by Stephen Covey. Both books helped me incredibly in recognizing my goals and how to achieve them. A quote that I will never forget is “Start quantifying your days by how many healthy, positive things you accomplished,
                     and you will see how quickly you begin to make progress.” - Brianna West. This sentence is one that I refer to constantly whenever I need a little bit of empowerment.</p> -->
                 <h5 class="mt-5">Piano</h5>
-                <p>I started piano lessons when I was 6. At one point in my life, I even thought I would develop a career out of this hobby. Although I've stopped piano lessons, I still practice consistently. However, instead of classical pieces,
-                    I focus more now on piano arrangements of pop genre classics. A piece that I am working on right now is the piano arrangement of the background piano soundtrack from the movie Parasite during the “Jjapaguri” scene. I also included
+                <p>I started piano lessons when I was 6. At one point in my life, I even thought I would develop a career out of this hobby. Currently, I focus on piano arrangements of pop genre classics. A piece that I'm working on right now is the piano arrangement of the background piano soundtrack from the movie Parasite during the “Jjapaguri” scene. I also included
                     a video below of another piece that I worked on during my break.</p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bQP6dz2alL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
