added new chit chatte project to website

--- a/index.html
+++ b/index.html
@@ -105,6 +105,22 @@
                     <div class="item">
                         <div class="media">
                             <div class="media-body">
+                                <h3 class="title mb-1"><a href="https://github.com/ronneylogs/ChitChatte">Chit Chatte</a> <span class="meta mb-1" style="color:#0BDA51">Ongoing*</span></h3> 
+                                <div class="meta mb-1"><span class="date">May 2023</span><span class="time">Current</div> 
+                                <div class="intro">A web chat app for cat parent's to bombard eachother with cat photos. Coded with ReactJS, ExpressJS, and MongoDB. </div>
+                                
+                            </div>
+                            <a href="https://github.com/ronneylogs/ChitChatte" class="btn btn-secondary" style="background-color:black">View</a>
+                            <!--//media-body-->
+                        </div>
+                        <!--//media-->
+                    </div>
+                </div>
+
+                <div class="card mb-5 py-3 px-3 shadow">
+                    <div class="item">
+                        <div class="media">
+                            <div class="media-body">
                                 <h3 class="title mb-1"><a href="https://github.com/ronneylogs/Maze-Project">Maze Game</a></h3>
                                 <div class="meta mb-1"><span class="date">January 2023</span><span class="time">April 2023</div>
                                 <div class="intro">Maze escape game that follows the adventures of a Arcanist imprisoned for practicing forbidden magic. Coded in Java using Maven.</div>
