--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                         <a class="nav-link" href="about.html"><i class="fas fa-user fa-fw mr-2"></i>About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="assets/Resume.pdfß"><i class="fas fa-briefcase fa-fw mr-2"></i>Resume</a>
+                        <a class="nav-link" href="assets/Resume.pdf"><i class="fas fa-briefcase fa-fw mr-2"></i>Resume</a>
                     </li>
                 </ul>
             </div>
