--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section class="cta-section theme-bg-light py-5">
             <div class="container text-center">
                 <h2 class="heading">Welcome to my profile</h2>
-                <div class="intro">I'm currently a 3rd Year Computer Science student at Simon Fraser University. I have experience with C/C++, Python, Java, HTML/CSS/JS, ReactJS, ExpressJS and the Flutter SDK. Currently open and looking for software internship opportunities for Fall 2023.</div>
+                <div class="intro">I'm currently a 3rd Year Computer Science student at Simon Fraser University. I have experience with C/C++, Python, Java, HTML/CSS/JS, ReactJS, ExpressJS and the Flutter SDK. Currently seeking software internship opportunities for Spring 2024.</div>
             </div>
             <!--//container-->
         </section>
@@ -85,7 +85,7 @@
                     <div class="item">
                         <div class="media">
                             <div class="media-body">
-                                <h3 class="title mb-1"><a href="https://github.com/ronneylogs/Bill-Wizard">Bill Wizard</a> <span class="meta mb-1" style="color:#0BDA51">Ongoing*</span></h3> 
+                                <h3 class="title mb-1"><a href="https://github.com/ronneylogs/Bill-Wizard">Bill Wizard</a> <!-- <span class="meta mb-1" style="color:#0BDA51">Ongoing*</span> --></h3> 
                                 <div class="meta mb-1"><span class="date">May 2023</span><span class="time">Current</div> 
                                 <div class="intro">An iOS and Android app to helps users manage their receipts and split bills with their friends. Coded in Dart with the Flutter SDK, ExpressJS, and MongoDB. </div>
                                 <br>
@@ -105,7 +105,7 @@
                     <div class="item">
                         <div class="media">
                             <div class="media-body">
-                                <h3 class="title mb-1"><a href="https://github.com/ronneylogs/ChitChatte">Chit Chatte</a> <span class="meta mb-1" style="color:#0BDA51">Ongoing*</span></h3> 
+                                <h3 class="title mb-1"><a href="https://github.com/ronneylogs/ChitChatte">Chit Chatte</a> <!--<span class="meta mb-1" style="color:#0BDA51">Ongoing*</span>--></h3> 
                                 <div class="meta mb-1"><span class="date">May 2023</span><span class="time">Current</div> 
                                 <div class="intro">A web chat app for cat parent's to bombard eachother with cat photos. Coded with ReactJS, ExpressJS, and MongoDB. </div>
                                 
