--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <div class="media">
                             <div class="media-body">
                                 <h3 class="title mb-1"><a href="https://github.com/ronneylogs/Bill-Wizard">Bill Wizard</a> <!-- <span class="meta mb-1" style="color:#0BDA51">Ongoing*</span> --></h3> 
-                                <div class="meta mb-1"><span class="date">May 2023</span><span class="time">Current</div> 
+                                <div class="meta mb-1"><span class="date">May 2023</span><span class="time">August 2023</div> 
                                 <div class="intro">An iOS and Android app to helps users manage their receipts and split bills with their friends. Coded in Dart with the Flutter SDK, ExpressJS, and MongoDB. </div>
                                 <br>
                                 <div class="intro">*Also experimenting with a 
@@ -106,7 +106,7 @@
                         <div class="media">
                             <div class="media-body">
                                 <h3 class="title mb-1"><a href="https://github.com/ronneylogs/ChitChatte">Chit Chatte</a> <!--<span class="meta mb-1" style="color:#0BDA51">Ongoing*</span>--></h3> 
-                                <div class="meta mb-1"><span class="date">May 2023</span><span class="time">Current</div> 
+                                <div class="meta mb-1"><span class="date">May 2023</span><span class="time">August 2023</div> 
                                 <div class="intro">A web chat app for cat parent's to bombard eachother with cat photos. Coded with ReactJS, ExpressJS, and MongoDB. </div>
                                 
                             </div>
