--- a/index.html
+++ b/index.html
@@ -85,8 +85,24 @@
                     <div class="item">
                         <div class="media">
                             <div class="media-body">
+                                <h3 class="title mb-1"><a href="https://github.com/ronneylogs/Serverless-Image-Processor">AWS Serverless Image Processor</a> <!-- <span class="meta mb-1" style="color:#0BDA51">Ongoing*</span> --></h3> 
+                                <div class="meta mb-1"><span class="date">April 2023</span><span class="time">September 2023</div> 
+                                <div class="intro"> This was originally a term project I had worked on in my first year. Now that I have more experience, I decided to revive it by incorporating React and AWS.</div>
+                                
+                            </div>
+                            <a href="https://github.com/ronneylogs/Serverless-Image-Processor" class="btn btn-secondary" style="background-color:black">View</a>
+                            <!--//media-body-->
+                        </div>
+                        <!--//media-->
+                    </div>
+                </div>
+
+                <div class="card mb-5 py-3 px-3 shadow">
+                    <div class="item">
+                        <div class="media">
+                            <div class="media-body">
                                 <h3 class="title mb-1"><a href="https://github.com/ronneylogs/Bill-Wizard">Bill Wizard</a> <!-- <span class="meta mb-1" style="color:#0BDA51">Ongoing*</span> --></h3> 
-                                <div class="meta mb-1"><span class="date">May 2023</span><span class="time">August 2023</div> 
+                                <div class="meta mb-1"><span class="date">May 2023</span><span class="time">June 2023</div> 
                                 <div class="intro">An iOS and Android app to helps users manage their receipts and split bills with their friends. Coded in Dart with the Flutter SDK, ExpressJS, and MongoDB. </div>
                                 <br>
                                 <div class="intro">*Also experimenting with a 
@@ -106,7 +122,7 @@
                         <div class="media">
                             <div class="media-body">
                                 <h3 class="title mb-1"><a href="https://github.com/ronneylogs/ChitChatte">Chit Chatte</a> <!--<span class="meta mb-1" style="color:#0BDA51">Ongoing*</span>--></h3> 
-                                <div class="meta mb-1"><span class="date">May 2023</span><span class="time">August 2023</div> 
+                                <div class="meta mb-1"><span class="date">May 2023</span><span class="time">July 2023</div> 
                                 <div class="intro">A web chat app for cat parent's to bombard eachother with cat photos. Coded with ReactJS, ExpressJS, and MongoDB. </div>
                                 
                             </div>
