--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                 </p>
                 <figure><img class="img-fluid" src="assets/images/panorama_ridge.png" alt="image"></figure>
                 <h5 class="mt-5">Hiking</h5>
-                <p>When I’m not doing geeky computery stuff, I enjoy going outdoors for both camping and hiking. The photo above is one I took during the summer while backpacking at Garibaldi Park. It was my first time backpacking, the trip took me two days
+                <p>I enjoy going outdoors for both camping and hiking. The photo above is one I took during the summer while backpacking at Garibaldi Park. It was my first time backpacking, the trip took me two days
                     to complete which consisted of hiking over 9 kilometers uphill to reach the campground. Hiking up to the Panorama Ridge summit took another 6 kilometers of strenuous uphill legwork. The experience was difficult but overall extremely
                     rewarding. Something I will never forget is using the outhouses, it was impossible to get used to the smells.
                 </p>
